--- a/templates/attestation_template.html
+++ b/templates/attestation_template.html
@@ -3,38 +3,40 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Attest_{{ client_surname }}{{ client_firstname }} - {{ year }}</title>
+  <link rel="stylesheet" href="attestation_style.css">
 </head>
 
 <body>
   <header>
-    <div class="teacher">
-      <p>Entreprise {{ teacher_surname|upper }} {{ teacher_firstname|upper }}</p>
-      <p>agréé pour les services à la personne.</p>
-      <p>Siret : {{ teacher_siret }} </p>
-      <p>SAP : {{ teacher_SAP }}</p>
-      <p>Adresse de l'organisme : </p>
-      {% if teacher_address.other is defined %}
-      <p>{{ teacher_address.other }} </p>
-      {% endif %}
-      <p>{{ teacher_address.street }} </p>
-      <p>{{ teacher_address.zipcode }} {{ teacher_address.city}} </p>
-      <p>{{ teacher_address.country  }}</p>
-
+    <div class="infos">
+      <div class="infos__teacher">
+        <p class="infos__teacher__title">Entreprise {{ teacher_surname|upper }} {{ teacher_firstname|upper }}</p>
+        <p>agréé pour les services à la personne.</p>
+        <p>Siret : {{ teacher_siret }} </p>
+        <p>SAP : {{ teacher_SAP }}</p>
+        <p>Adresse de l'organisme : </p>
+        {% if teacher_address.other is defined %}
+        <p>{{ teacher_address.other }} </p>
+        {% endif %}
+        <p>{{ teacher_address.street }} </p>
+        <p>{{ teacher_address.zipcode }} {{ teacher_address.city}} </p>
+        <p>{{ teacher_address.country  }}</p>
+      </div>
+      <div class="infos__client">
+        <p>{{ client_sex|civility}} {{ client_surname|upper}} {{client_firstname }} </p>
+        {% if client_address.other is defined %}
+        <p>{{ client_address.other }} </p>
+        {% endif %}
+        <p>{{ client_address.street }} </p>
+        <p>{{ client_address.zipcode }} {{ client_address.city}} </p>
+        {% if client_address.country is defined %}
+        <p>{{ client_address.country }} </p>
+        {% endif %}
+      </div>
     </div>
-    <div class="client">
-      <p>{{ client_sex|civility}} {{ client_surname|upper}} {{client_firstname }} </p>
-      {% if client_address.other is defined %}
-      <p>{{ client_address.other }} </p>
-      {% endif %}
-      <p>{{ client_address.street }} </p>
-      <p>{{ client_address.zipcode }} {{ client_address.city}} </p>
-      {% if client_address.country is defined %}
-      <p>{{ client_address.country }} </p>
-      {% endif %}
-    </div>
+    <h1>Attestation destinée au centre des impôts</h1>
   </header>
-  <h1>Attestation destinée au centre des impôts</h1>
   <main>
     <div class="letter">
       <p>
