--- a/templates/attestation_style.css
+++ b/templates/attestation_style.css
@@ -1,24 +1,138 @@
-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
+/* General */
+@font-face {
+    font-family: 'Artemisia';
+    src: url('fonts/gfs_artemisia/GFSArtemisia.otf') format('otf'),
+        url('fonts/gfs_artemisia/GFSArtemisia.ttf') format('ttf');
 }
 
-header div {
-    max-width: 45%
+@font-face {
+    font-family: 'Orkney';
+    src: url("fonts/orkney/Orkney Regular.eot") format("eot"),
+         url("fonts/orkney/Orkney Regular.woff2") format("woff2"),
+         url("fonts/orkney/Orkney Regular.woff") format("woff"),
+         url("fonts/orkney/Orkney Regular.otf") format("otf"),
+         url("fonts/orkney/Orkney Regular.ttf") format("ttf");
+}
+
+@page {
+    margin: 0;
+}
+
+body {
+    margin: 0;
+    font-family: "Orkney", sans-serif;
+}
+
+/* margins */
+header>*, .letter>*:not(.letter__summary), footer {
+    padding: 0 8%;
+}
+
+.letter__summary>p {
+    padding-left: 8%;
+}
+
+ul li {
+    list-style: none;
+}
+
+/* header */
+header {
+    color: white;
+    background: #447d29;
+    width: 100%;
+    padding-top: 5%;
+}
+
+.infos__teacher__title {
+    font-family: Artemisia, serif;
 }
 
 h1 {
-    font-size: larger;
     text-align: center;
-    margin: 2cm
+    padding-bottom: 8px;
 }
 
-table {
-    width: 100%;
+.infos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-footer {
+.infos__client{
+    font-size: 19px;
+}
+
+header p {
+    margin: 0;
+}
+
+/* main */
+.price, .asterisque {
+    color: firebrick;
+}
+
+/* -- bilan */
+.bilan {
+    margin: 45px auto;
+    border-collapse: collapse;
+}
+
+.bilan td, .bilan th {
+    border: darkgray solid 1px;
+    padding: 5px 9px;
+}
+
+.bilan tr:nth-child(2n+1) {
+    background: gainsboro;
+}
+
+/* -- letter 2 */
+.letter__summary {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 40px;
+}
+
+.letter__summary>* {
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+.letter__summary p {
+    background: #87c16c;
+    display: block;
+    width: 60%;
+    margin: 0;
+}
+
+.letter__summary .total-price-container {
+    background: #447d29;
+    display: block;
+    flex-grow: 1;
+}
+
+.total-price {
+    margin: auto;
+    padding-top: 5px;
+}
+
+.total-price th {
+    width: 100px;
     text-align: right;
+}
+
+.total-price__title {
+    color: white;
+}
+
+.total-price__amount {
+    color: black;
+}
+
+/* Footer */
+footer {
+    position: absolute;
+    bottom: 0;
+    font-style: italic;
 }
