--- a/templates/facture_template.html
+++ b/templates/facture_template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Facture_{{ client_surname }}{{ client_firstname }} - {{ month }}_{{ year }}</title>
-  <link rel="stylesheet" href="attestation_style.css">
+  <link rel="stylesheet" href="facture_style.css">
 </head>
 
 <body>
@@ -33,6 +33,7 @@
         <p>SAP : {{ teacher_SAP }}</p>
       </div>
       <div class="infos__client">
+        <p class="infos__client__title">Adressée à</p>
         <p>{{ client_sex|civility}} {{ client_surname|upper}} {{client_firstname }} </p>
         {% if client_address.other is defined %}
         <p>{{ client_address.other }} </p>
@@ -62,33 +63,41 @@
         <td>{{ total_amount_student[student]|money }}</td>
       </tr>
       {% endfor %}
-    </table>
-    <table class="Total NET">
       <tr>
-        <th>Total Net</th>
-        <td>{{ (already_paid_client + left_to_pay_client)|money }}</td>
-      </tr>
-      <tr>
-        <th>Acompte versé</th>
-        <td>{{ already_paid_client|money }}</td>
-      </tr>
-      <tr>
-        <th>Reste à régler</th>
-        <td>{{ left_to_pay_client|money }}</td>
+        <td>0.0</td>
+        <td>Frais de déplacement</td>
+        <td>{{ 0|money }}</td>
+        <td>{{ 0|money }}</td>
       </tr>
     </table>
+    <div class="total-container">
+      <table class="total">
+        <tr>
+          <th>Total Net : </th>
+          <td>{{ (already_paid_client + left_to_pay_client)|money }}</td>
+        </tr>
+        <tr>
+          <th>Acompte versé : </th>
+          <td>{{ already_paid_client|money }}</td>
+        </tr>
+        <tr>
+          <th>Reste à régler : </th>
+          <td>{{ left_to_pay_client|money }}</td>
+        </tr>
+      </table>
+    </div>
   </main>
   <footer>
     <div class="conditions">
-      <p>Règlement à effectuer exclusivement par virement bancaire, par chèque ou en liquide.</p>
-      <p>Le règlement, si fait par chèque, se fait à l'ordre de "Chiffaudel Yann"</p>
-      <p>Règlement avec un délai maximal de 45 jours après la date de facturation.</p>
-      <p>En cas de paiement effectué après la date d'échéance, pénalités au taux annuel de 50%</p>
+      <p class="conditions__title">Conditions de règlement :</p>
+      <p>Règlement à effectuer exclusivement par virement bancaire, en liquide ou par chèque à l'ordre de
+        "Chiffaudel Yann" avec un délai maximal de 45 jours après la date de facturation. En cas de paiement effectué
+        après la date d'échéance, pénalités au taux annuel de 50%.</p>
     </div>
     <div class="remarques">
-      <p>Vous bénéficiez d'une remise de 50% sur le total annuel de toutes vos factures<span class="asterisque">*</span>
-      </p>
-      <p>Remise effectuée sous forme de réduction ou crédit d'impôt, sous condition d'éligibilité.</p>
+      <p class="remarques__title">Remarques : </p>
+      <p>Vous bénéficiez d'une remise de 50% sur le total annuel de toutes vos factures.<span class="asterisque">*</span>
+      Remise effectuée sous forme de réduction ou crédit d'impôt, sous condition d'éligibilité.</p>
       <p><span class="asterisque">*</span>Article 199 sexdéciès du CGI, sous réserve de modification de la législation.
       </p>
     </div>
