fix: some name was still hardcoded instead of being {{ teacher_surname }}

--- a/templates/facture_template.html
+++ b/templates/facture_template.html
@@ -90,8 +90,8 @@
   <footer>
     <div class="conditions">
       <p class="conditions__title">Conditions de règlement :</p>
-      <p>Règlement à effectuer exclusivement par virement bancaire, en liquide ou par chèque à l'ordre de
-        "Chiffaudel Yann" avec un délai maximal de 45 jours après la date de facturation. En cas de paiement effectué
+      <p>Règlement à effectuer exclusivement par virement bancaire ou par chèque à l'ordre de
+        "{{ teacher_surname }} {{ teacher_firstname }}" avec un délai maximal de 45 jours après la date de facturation. En cas de paiement effectué
         après la date d'échéance, pénalités au taux annuel de 50%.</p>
     </div>
     <div class="remarques">
