fix: modified the bill template to avoid elision problems

--- a/templates/facture_template.html
+++ b/templates/facture_template.html
@@ -45,7 +45,7 @@
         {% endif %}
       </div>
     </div>
-    <h1>Facture de {{ month }} {{ year }}</h1>
+    <h1>Facture - {{ month }} {{ year }}</h1>
   </header>
   <main>
     <table class="bilan">
